# Athena

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: Dockerfile  cli.py  codegen.py  drift.py  eda.py  llm.py  main.py  ml.py  model_arena.py  nixpacks.toml  profiles.py  requirements.txt  timeseries.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ComparePage.tsx  Landing.tsx  ReportPage.tsx  UI.tsx  UploadPage.tsx
frontend/src/lib/: api.ts  reportgen.ts
frontend/src/types/: index.ts
