[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-eda"
version = "0.2.1"
description = "Automated EDA, ML readiness scoring, and data quality checks — locally in your browser."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Athena" }]
keywords = ["eda", "machine-learning", "data-science", "exploratory-data-analysis"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.3.0",
    "nltk>=3.8.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "scipy>=1.11.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "starlette>=0.27.0",
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.0",
]

[project.optional-dependencies]
all = [
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.0",
]

[project.urls]
Homepage = "https://athena-alpha-hazel.vercel.app"
Repository = "https://github.com/SaurabhLingam/Athena"

[project.scripts]
athena = "backend.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["static/**/*", "static/*"]